Update SignUp page HTML - deployment 2cc98

--- a/public/index/html/SignUp.html
+++ b/public/index/html/SignUp.html
@@ -67,7 +67,7 @@
   </head>
 
   <body>
-    <div class="containter">
+    <div class="containter col">
       <div class=" form-group" id="signupForm">
         <div class="justify-content-center row" id="signupLabel">
           <h1 class="text-center">Sign Up</h1>
@@ -110,6 +110,9 @@
             placeholder="Re-enter password"
           />
         </div>
+        <div class="justify-content-center row" >
+          <span class="text-center mt-4" id="SignUpResultMessage"></span>
+        </div>
         <div class="justify-content-center mt-4 row">
           <button
             class="col-sm-8 form-control form-control-lg btn btn-primary"
@@ -124,7 +127,7 @@
             id="goHome"
             class="col-sm-8 form-control form-control-lg btn btn-secondary"
           >
-            Login
+            Go to Home Page
           </button>
         </div>
       </div>
