--- a/public/index/html/reddit.html
+++ b/public/index/html/reddit.html
@@ -7,7 +7,7 @@
   <!-- Firebase App is always required and must be first -->
   <script src="https://www.gstatic.com/firebasejs/5.4.1/firebase-app.js"></script>
 
-  <!--Autentication-->
+  <!--Authentication-->
   <script src="https://www.gstatic.com/firebasejs/5.4.1/firebase-auth.js"></script>
 
   <!--Database-->
@@ -62,8 +62,8 @@
       </div>
     </div>
   </nav>
-  <div id="mainContent">
-    <!-- MAIN CONTENT -->
+  <div id="content">
+    <!-- Main Content -->
     <div class="row">
       <div class="col-sm-2">
         <br>
@@ -140,13 +140,7 @@
           </div>
         </div>
       </div>
-      <!-- FOOTER -->
-      <br><br>
-      <footer class="footer">
-        <div style="text-align: center; font-size:10pt;">
-          &copy; Copyright 2018 Washington University in St.Louis
-        </div>
-      </footer>
+    
 
       <!-- POST MODAL-->
       <div class="modal fade w-100 p-3" id="postModal" tabindex="-1" role="dialog" aria-labelledby="newPostLabel" aria-hidden="true">
