--- a/public/index/html/PasswordReset.html
+++ b/public/index/html/PasswordReset.html
@@ -1,43 +1,113 @@
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.2">
+
     <!-- Firebase App is always required and must be first -->
     <script src="https://www.gstatic.com/firebasejs/5.4.1/firebase-app.js"></script>
 
-    <!--Autentication-->
+    <!--Authentication-->
     <script src="https://www.gstatic.com/firebasejs/5.4.1/firebase-auth.js"></script>
 
     <!--Database-->
     <script src="https://www.gstatic.com/firebasejs/5.4.1/firebase-database.js"></script>
-
     <script src="https://www.gstatic.com/firebasejs/5.5.1/firebase.js"></script>
+
     <script>
-    // Initialize Firebase
-    var config = {
-    apiKey: "AIzaSyBm6NA9yafW64dWpG0nwHpzwA73lTi_EHc",
-    authDomain: "washu-books.firebaseapp.com",
-    databaseURL: "https://washu-books.firebaseio.com",
-    projectId: "washu-books",
-    storageBucket: "washu-books.appspot.com",
-    messagingSenderId: "94731731491"
-    };
-    firebase.initializeApp(config);
+      const firebaseConfig = {
+        apiKey: "AIzaSyA-c6ek6-s_F17oT7MqSrHFLV0pKx6GgVs",
+        authDomain: "universitystudyhall.firebaseapp.com",
+        projectId: "universitystudyhall",
+        storageBucket: "universitystudyhall.appspot.com",
+        messagingSenderId: "994046093519",
+        appId: "1:994046093519:web:61ddee7ee39cbcec492fba",
+        measurementId: "G-67S8VGW8RC"
+      };
+  
+      // Initialize Firebase
+      firebase.initializeApp(firebaseConfig);
     </script>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script src="../js/ResetScript.js"></script>
-    <link rel="stylesheet" type="text/css" href="../css/ResetStyle.css"/>
-    <link href="https://fonts.googleapis.com/css?family=Exo+2|Indie+Flower|Josefin+Sans|Lobster|Roboto+Mono|Shadows+Into+Light|Source+Serif+Pro|Ubuntu" rel="stylesheet">
+    <!-- Google Fonts -->
+    <link
+    href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+    rel="stylesheet"
+    />
+    <!-- MDB -->
+    <link
+    href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.2.0/mdb.min.css"
+    rel="stylesheet"
+    />
+
+    <!-- Custom CSS -->
+    <link rel="stylesheet" type="text/css" href="../css/LoginStyle.css" />
+
+    <title>Password Reset</title>
   </head>
+
   <body>
-    <form id="resetForm">
-      <label id="resetLabel">
-        <div id="label1">Reset your password </div>
-        <div id="label2">Enter your email address and we will send you
-           a link to reset your password</div>
-      </label><br>
-      <input type="text" id="email" name="email" placeholder="Email Address"/><br>
-      <button id="resetPassword"/> Reset Password </button>
-    <!--  <input type="submit" id="resetPassword" name="resetPassword" value="Reset Password"/> -->
-    </form>
+    <!-- MDB -->
+    <script
+    type="text/javascript"
+    src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.2.0/mdb.umd.min.js"
+    ></script>
+    <!-- Section: Design Block -->
+    <section class="background-radial-gradient overflow-hidden">
+
+      <div class="container px-4 py-5 px-md-5 text-center text-lg-start my-5">
+        <div class="row gx-lg-5 align-items-center mb-5">
+          <div class="col-lg-6 mb-5 mb-lg-0" style="z-index: 10">
+            <h1 class="my-5 display-5 fw-bold ls-tight" style="color: hsl(218, 81%, 95%)">
+              University Textbook Marketplace <br />
+              <span style="color: hsl(218, 81%, 75%)">and Study Forum</span>
+            </h1>
+            <p class="mb-4 opacity-70" style="color: hsl(218, 81%, 85%)">
+              Buy, sell, and exchange class information hassle-free. 
+              Whether you're searching for required course materials or looking to offload last semester's books, our platform connects you with fellow students seamlessly. 
+              Dive into our vibrant study forum to collaborate, share resources, and conquer academic challenges together. 
+            </p>
+          </div>
+
+          <div class="col-lg-6 mb-5 mb-lg-0 position-relative">
+            <div id="radius-shape-1" class="position-absolute rounded-circle shadow-5-strong"></div>
+            <div id="radius-shape-2" class="position-absolute shadow-5-strong"></div>
+
+            <div class="card bg-glass">
+              <div class="card-body px-4 py-5 px-md-5">
+                <h4 class="mb-2  text-center">Password Reset</h4>
+                <form>
+
+
+                  <!-- Email input -->
+                  <div class="form-outline mb-4">
+                    <input type="email" id="email" class="form-control border border-secondary border-solid border-1" />
+                    <label class="form-label">Email address</label>
+                  </div>
+
+                  <div class="d-flex justify-content-center mb-2">
+                    <p class="text-muted small text-center" id="loginResult">
+                    </p>
+                  </div>
+                  
+                  <button type="submit" id="resetPassword" class="btn btn-secondary btn-block mb-1">
+                    Reset
+                  </button>   
+
+                  <button type="submit" id="goHome" class="btn btn-light btn-block ">
+                    Return to Login
+                  </button>         
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Section: Design Block -->  
+
+    <!-- Custom Javascript -->
+    <script src="../js/CommonFunctions.js"></script>
+    <script src="../js/SignUp.js"></script>    
+    <script src="../js/ResetScript.js"></script>
+
   </body>
 </html>
