--- a/public/index/html/Textbooks.html
+++ b/public/index/html/Textbooks.html
@@ -7,7 +7,7 @@
   <!-- Firebase App is always required and must be first -->
   <script src="https://www.gstatic.com/firebasejs/5.4.1/firebase-app.js"></script>
 
-  <!--Autentication-->
+  <!--Authentication-->
   <script src="https://www.gstatic.com/firebasejs/5.4.1/firebase-auth.js"></script>
 
   <!--Database-->
@@ -34,7 +34,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
-  <link rel="stylesheet" type="text/css" href="/css/HomeStyle.css">
+  <link rel="stylesheet" type="text/css" href="../css/HomeStyle.css">
   <!-- Use Bootstrap -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <!-- FontAwesome Glyphicons -->
@@ -45,9 +45,7 @@
 <body>
   <!-- TOP NAVBAR -->
   <nav class="navbar navbar-expand-lg navbar-dark">
-    <a class="navbar-brand" href="#TODO">
-      <img src="/images/whiteLogo.png" width="300" height="45" class="d-inline-block align-top" alt="">
-    </a>
+
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -60,7 +58,7 @@
       </span>
     </div>
   </nav>
-  <div id="mainContent">
+  <div id="content">
     <div class="row">
       <!-- SIDEBAR -->
       <div class="col-sm-2">
@@ -92,21 +90,20 @@
           <a class="nav-link" href="../html/userSettings.html">Settings</a>
         </div>
       </div>
-      <!-- MAIN CONTENT -->
+      <!-- Main Content -->
       <div class="col-sm-10">
         <!-- Header image -->
         <div class="container">
           <img src="../images/holmes.jpg" style='width:100%;' alt="Holmes Lounge" />
           <div class="centered">
-            <h1>Welcome to WashU
-              <br>For You!</h1>
-            <h4>By college students, for college students</h4>
+            <h1>Textbooks For Sale</h1>
+            <h4>By college students, <br> for college students</h4>
           </div>
         </div>
         <br>
         <br>
         <h1>Textbook Buy and Sell</h1>
-        <div style="text-align:center"> Come and support your local student businesses. </div>
+        <h3> Support your local student vendors. </h3>
         <hr>
         <h4>Search by name, author, or ISBN</h4>
         <div class="input-group">
@@ -276,13 +273,7 @@
   </div>
   <br>
 
-  <!-- FOOTER -->
-  <footer class="footer">
-    <div style="text-align: center; font-size:10pt;">
-      &copy; Copyright 2018 Washington University in St.Louis
-    </div>
 
-  </footer>
 </body>
 
 </html>
