--- a/public/index/html/classes.html
+++ b/public/index/html/classes.html
@@ -7,7 +7,7 @@
   <!-- Firebase App is always required and must be first -->
   <script src="https://www.gstatic.com/firebasejs/5.4.1/firebase-app.js"></script>
 
-  <!--Autentication-->
+  <!--Authentication-->
   <script src="https://www.gstatic.com/firebasejs/5.4.1/firebase-auth.js"></script>
 
   <!--Database-->
@@ -52,9 +52,7 @@
 <body>
   <!-- TOP NAVBAR -->
   <nav class="navbar navbar-expand-lg navbar-dark">
-    <a class="navbar-brand" href="#TODO">
-      <img src="/images/whiteLogo.png" width="300" height="45" class="d-inline-block align-top" alt="">
-    </a>
+
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
       aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -68,8 +66,8 @@
       </div>
     </div>
   </nav>
-  <div id="mainContent">
-    <!-- MAIN CONTENT -->
+  <div id="content">
+    <!-- Main Content -->
     <div class="row">
       <div class="col-sm-2">
         <br>
@@ -105,9 +103,8 @@
           <div class="container">
             <img src="../images/holmes.jpg" style='width:100%;' alt="Holmes Lounge" />
             <div class="centered">
-              <h1>Welcome to WashU
-                <br>For You!</h1>
-              <h4>By college students, for college students</h4>
+              <h1>Class Listings</h1>
+              <h4>By college students, <br> for college students</h4>
             </div>
           </div>
           <br>
@@ -324,11 +321,7 @@
             </div>
           </div>
           <br>
-          <!-- FOOTER -->
-          <footer class="footer">
-            <div style="text-align: center; font-size:10pt;">
-              &copy; Copyright 2018 Washington University in St.Louis
-            </div>
+      
 
           </footer>
 </body>
