--- a/public/index/html/notes.html
+++ b/public/index/html/notes.html
@@ -6,7 +6,7 @@
   <!-- Firebase App is always required and must be first -->
   <script src="https://www.gstatic.com/firebasejs/5.4.1/firebase-app.js"></script>
 
-  <!--Autentication-->
+  <!--Authentication-->
   <script src="https://www.gstatic.com/firebasejs/5.4.1/firebase-auth.js"></script>
 
   <!--Database-->
@@ -47,9 +47,7 @@
 <body>
   <!-- TOP NAVBAR -->
   <nav class="navbar navbar-expand-lg navbar-dark">
-    <a class="navbar-brand" href="#TODO">
-      <img src="/images/whiteLogo.png" width="300" height="45" class="d-inline-block align-top" alt="">
-    </a>
+
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -62,7 +60,7 @@
       </div>
     </div>
   </nav>
-  <!-- MAIN CONTENT -->
+  <!-- Main Content -->
   <div class="row">
     <div class="col-sm-2">
       <br>
@@ -98,9 +96,8 @@
       <div class="container">
         <img src="/images/holmes.jpg" style='width:100%;' alt="Holmes Lounge" />
         <div class="centered">
-          <h1>Welcome to WashU
-            <br>Free and For Sale!</h1>
-          <h4>By college students, for college students</h4>
+          <h1>Class Notes</h1>
+          <h4>By college students, <br> for college students</h4>
         </div>
       </div>
       <br>
@@ -108,6 +105,6 @@
       <!--  <a id="fileLink"> file </a> -->
       <div id="main"> </div>
       <p id="demo"> </p>
-      <!-- FOOTER -->
 
-</body </html>
+</body>
+</html>
