--- a/public/index/html/forum.html
+++ b/public/index/html/forum.html
@@ -1,8 +1,22 @@
-<html>
+<!DOCTYPE html>
+
+<!--
+    HTML Document
+    Description: Forum page for a specific class. 
+    - Create new posts with file attachments
+    - Delete posts if user created post or is a moderator
+    - Report a post
+    - Upvote or downvote a post
+    - Comment on posts
+    - Search posts
+-->
+
+<html lang='en'>
 
 <head>
+  <meta name="viewport" content="width=device-width">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-  <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
   <!-- Firebase App is always required and must be first -->
   <script src="https://www.gstatic.com/firebasejs/5.4.1/firebase-app.js"></script>
 
@@ -12,100 +26,370 @@
   <!--Database-->
   <script src="https://www.gstatic.com/firebasejs/5.4.1/firebase-database.js"></script>
 
+  <!--Storage -->
+  <script src="https://www.gstatic.com/firebasejs/5.5.1/firebase-storage.js"></script>
+
   <script src="https://www.gstatic.com/firebasejs/5.5.1/firebase.js"></script>
   <script>
-    // Initialize Firebase
-    var config = {
-    apiKey: "AIzaSyBm6NA9yafW64dWpG0nwHpzwA73lTi_EHc",
-    authDomain: "washu-books.firebaseapp.com",
-    databaseURL: "https://washu-books.firebaseio.com",
-    projectId: "washu-books",
-    storageBucket: "washu-books.appspot.com",
-    messagingSenderId: "94731731491"
+    const firebaseConfig = {
+      apiKey: "AIzaSyA-c6ek6-s_F17oT7MqSrHFLV0pKx6GgVs",
+      authDomain: "universitystudyhall.firebaseapp.com",
+      projectId: "universitystudyhall",
+      databaseURL: "https://universitystudyhall-default-rtdb.firebaseio.com",
+      storageBucket: "universitystudyhall.appspot.com",
+      messagingSenderId: "994046093519",
+      appId: "1:994046093519:web:61ddee7ee39cbcec492fba",
+      measurementId: "G-67S8VGW8RC"
     };
-    firebase.initializeApp(config);
-    </script>
 
-  <title> Notes </title>
-  <script src="../js/NotesScript.js"></script>
-  <!-- <script src='../js/test1.js'></script> -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-  <script src="../js/Setup.js"></script>
+    // Initialize Firebase
+    firebase.initializeApp(firebaseConfig);
+  </script>
+  <!-- Font Awesome -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
 
+  <!-- MDB -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.2.0/mdb.min.css" rel="stylesheet" />
 
-  <link rel="stylesheet" type="text/css" href="../css/NotesStyle.css">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-  <!-- FontAwesome Glyphicons -->
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <!-- Scrollbar Custom CSS -->
+  <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.min.css">
 
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+  <!-- Custom CSS -->
+  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" type="text/css" href="../css/authenticated.css">
+  <link rel="stylesheet" type="text/css" href="../css/forum.css">
+  <link rel="icon" href="../images/favicon.ico" type="image/x-icon">
+
+  <title>Class Page</title>
+
 </head>
 
-  <body>
-    <!-- TOP NAVBAR -->
-    <nav class="navbar navbar-expand-lg navbar-dark">
+<body>
+  <!-- Side Navbar -->
+  <nav class="background-radial-gradient" id="sidebar">
 
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <div class="navbar-nav ml-auto">
-          <!-- Right align -->
-          <button type="button" class="btn btn-light" id="logoutBtn">
-            <i class="fas fa-sign-out-alt"></i> Log Out</button>
-        </div>
-      </div>
-    </nav>
-    <!-- Main Content -->
-    <div class="row">
-      <div class="col-sm-2">
-        <br>
-        <br>
-        <!-- PROFILE INFO -->
-        <h5 class="center">
-          Welcome Back,
-          <br>
-          <div id="userName">User<div>
+    <!-- Header Side Navbar -->
+    <div id="dismiss">
+      <i class="fas fa-arrow-left"></i>
+    </div>
+    <div class="sidebar-header p-4">
+      <img id="profileImg" class="center w-50 h-50 "
+        src="https://d2x5ku95bkycr3.cloudfront.net/App_Themes/Common/images/profile/0_200.png">
+      <div class="center">
+        <h5 class=" center m-0" id="userName">
+          User
         </h5>
-        <br>
-        <!-- Profile image -->
-        <img id="profileImg" src="https://d2x5ku95bkycr3.cloudfront.net/App_Themes/Common/images/profile/0_200.png" class="center" alt="placeholder avatar" height="70" width="70">
-        <!-- Text input-->
-        <div class="center">
-          <br>
-          <!-- Text input-->
-          <div class="form-group">
-            <div class="col-md-6" id="userEmail">fillerEmail@gmail.com</div>
-          </div>
-        </div>
-        <!-- CATEGORIES -->
-        <div class="nav flex-column">
-          <a class="nav-link" href="../html/homepage.html">Home</a>
-          <a class="nav-link" href="../html/Textbooks.html">Textbooks</a>
-          <a class="nav-link" href="../html/classes.html">Classes</a>
-          <a class="nav-link" href="../html/userSettings.html">Settings</a>
-          <a class="nav-link active" href="../html/forum.html">Forum</a>
+        <div class="form-group">
+          <div class="" id="userEmail">userEmail</div>
         </div>
       </div>
-      <div class="col-sm-10">
-        <!-- Header image -->
-        <div class="container">
-          <img src="/images/holmes.jpg" style='width:100%;' alt="Holmes Lounge" />
-          <div class="centered">
-            <h1>Q&A Forum</h1>
-            <h4>By college students, <br> for college students</h4>
+    </div>
+    <!-- End Header Side Navbar -->
+
+    <ul class="list-unstyled components">
+      <li>
+        <a href="../html/home.html">Home </a>
+      </li>
+      <li class=" active">
+        <a href="../html/textbooks.html">
+          Textbooks
+        </a>
+      </li>
+      <li class=" list-unstyled" data-toggle="collapse" aria-expanded="true">
+        <a href="../html/classes.html">
+          Classes
+        </a>
+
+
+      </li>
+      <li>
+        <a href="../html/settings.html">Settings </a>
+      </li>
+    </ul>
+  </nav>
+  <!-- End Side Navbar -->
+
+
+  <div id="content">
+    <!-- Header Top Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-a  background-radial-gradient-4">
+      <!-- Container wrapper -->
+      <div class="container-fluid  ">
+        <!-- Toggle button -->
+        <button data-mdb-collapse-init class="navbar-toggler d-flex align-items-left" type="button"
+          data-mdb-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+          aria-label="Toggle navigation" id="sidebarCollapse">
+          <i class="fas fa-bars"></i>
+        </button>
+        <div class="collapse navbar-collapse justify-content-center ">
+
+        </div>
+        <!-- Right elements -->
+        <div class="d-flex align-items-center">
+
+          <a class="link-secondary me-3" id="logoutBtn" style="cursor: pointer;">
+            <i class="fas fa-sign-out-alt text-dark"></i> <span class="text-dark"> Log Out</span>
+          </a>
+
+        </div>
+        <!-- Right elements -->
+      </div>
+      <!-- Container wrapper -->
+    </nav>
+    <!-- End Header Top Navbar -->
+
+    <!-- Main Content -->
+    <section class="d-flex flex-column background-radial-gradient-4 overflow-auto vh-100">
+      <!-- Header image -->
+      <h2 id="className" class="text-center mb-2  outlined-text  fw-bold ">
+        Class Name
+      </h2>
+      <!-- Search Posts -->
+      <div class="container">
+
+        <div class="row">
+
+          <div class="input-group">
+            <div class="form-outline">
+              <input name="searchClass" type="text" oninput="searchPosts()" id="searchPostsQuery"
+                class="form-control bg-light" />
+              <label class="form-label" for="searchClass" style="margin-left: 0px;">Search Class Posts</label>
+              <div class="form-notch ">
+                <div class="form-notch-leading " style="width: 9px;"></div>
+                <div class="form-notch-trailing"></div>
+              </div>
+
+
+            </div>
+            <button id="search-button" type="button" class="btn btn-primary">
+              <i class="fas fa-search"></i>
+            </button>
           </div>
         </div>
-        <br>
-        <br>
-        <!-- FORUM -->
-        <a id="nabblelink" href="http://washu-for-you.89390.n8.nabble.com/">WashU For You</a>
-        <script src="http://washu-for-you.89390.n8.nabble.com/embed/f1"></script>
-    
 
-  </body>
+        <div class="row mt-4">
+          <div class="col-sm-3 col-12 " style="position: -webkit-sticky; position: sticky; height: auto; top: 0;">
+            <div class="vh-1" id="postSideBar" style="position: -webkit-sticky; position: sticky; top: 0;">
+              <button id="newPostBtn" type="button" class=" mb-2 btn btn-info btn-outline-primary w-100 "
+                data-toggle="modal" data-target="#postModal">New
+                Post</button>
+
+              <!-- Class Posts -->
+              <div id="postListings" class="list-group  overflow-auto " style="max-height: 200px;">
+                <div id="postListings-0" class="d-none clickable d-flex w-100 justify-content-between list-group-item ">
+
+                  <span class="flex-column align-items-start">No Posts In This Class Yet</span>
+                </div>
+                <div class="list-group-item ">
+                  <div class="spinner-border text-primary " role="status">
+                    <span class="visually-hidden">Loading...</span>
+                  </div>
+                </div>
+
+              </div>
+            </div>
+
+          </div>
+
+          <!-- Individual Post -->
+          <!-- Referenced from: mdbootstrap.com/snippets/jquery/marta-szymanska/1540015 -->
+          <div class="col-sm-9 col-12" id="postDetails">
+            <div class="row d-none" id="detailedView">
+              <div class=" mx-auto">
+
+
+                <!-- Section: Block Content -->
+                <section>
+
+                  <div class="card card-list">
+                    <div class="card-header bg-white d-flex justify-content-between align-items-center py-2">
+                      <div class="d-flex justify-content-start align-items-center">
+                        <img id="profileImgSmall" src="../images/placeholder.png" class="z-depth-1 rounded-circle"
+                          width="45" alt="avatar image">
+                        <div class="d-flex flex-column pl-3">
+                          <a id="postCreatedBy" class="clickable font-weight-normal mb-0">Username</a>
+                          <a id="postCreatedAt" class="max-height-1 small text-muted mb-0">Shared at</a>
+                        </div>
+
+                      </div>
+
+                      <ul class="list-unstyled d-flex align-items-center text-muted mb-0">
+                        <li id="flagBtn">
+                          <span class="fas fa-flag clickable" data-toggle="tooltip" title="Report Post">
+                          </span>
+                        </li>
+                        <li class="m-3">
+                          <i id="deleteBtn" class="fas fa-trash-alt clickable" data-toggle="tooltip"
+                            title="Delete Post">
+                          </i>
+                        </li>
+                      </ul>
+                    </div>
+                    <div class="card-body bg-white">
+                      <div class="w-100">
+                        <h4 id="postDetailsTitle" class="card-title">title</h4>
+                      </div>
+                      <p id="postDetailsContent">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sit amet
+                        nulla vitae risus
+                        auctor
+                        malesuada. Integer vitae nunc eget magna malesuada tincidunt. Duis vel elit eget lacus aliquam
+                        fermentum. Vivamus rutrum risus a massa consequat, vel commodo metus venenatis. </p>
+
+                      <a id="postDetailsFile"></a>
+
+
+                      <div class="d-flex justify-content-between align-items-center mt-3">
+                        <div id="topic" class="upvote d-flex flex-row">
+                          <button id="upBtn" type="button" class="upvote btn btn-fb btn-sm py-1 px-2 m-0 mr-2">Upvote<i
+                              class="far fa-thumbs-up pr-1 fa-flip-horizontal"></i> </button>
+                          <button id="downBtn" type="button" class="downvote btn btn-fb btn-sm py-1 px-2 m-0 mr-2"><i
+                              class="far fa-thumbs-down pr-1"></i> Downvote</button>
+
+
+
+                        </div>
+
+
+                        <div class="d-flex pl-3 small text-muted mb-0">
+                          <span>
+                            <span id="voteScore" class="count">0 </span> Score from
+                            <span id="voteTotal" class="count">0 </span> Votes
+                          </span>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="pt-2 bg-light lighten-4" id="postComments">
+                      <div class="px-4 pt-2 d-none" id="postComments-0">
+                        <div class="d-flex flex-column pl-3">
+                          <div class="d-flex justify-content-start align-items-center">
+                            <img src="../images/placeholder.png"
+                              class="z-depth-1 rounded-circle top-left profileImgCommenter" width="45" height="45"
+                              alt="">
+                            <div class="d-flex flex-column pl-3">
+                              <a class="clickable font-weight-normal mb-0 usernameCommenter">Username</a>
+                              <p class="font-weight-light dark-grey-text mb-0 contentCommenter">Lorem ipsum dolor sit
+                                amet
+                                consectetur
+                                adipisicing
+                                elit consequuntur, minus tenetur dicta optio sint nobis nesciunt deserunt quisquam eius.
+                              </p>
+                            </div>
+                          </div>
+
+                        </div>
+                        <hr class="mb-0">
+                      </div>
+
+                    </div>
+                    <div class="card-footer white py-3 justify-content-center ">
+                      <textarea id="inputBox" class="form-control rounded-0" rows="2"
+                        placeholder="Write a comment"></textarea>
+
+                      <div class="container my-2 ">
+                        <div class="row justify-content-center my-2">
+                          <button id="newCommentBtn"
+                            class="col-md-6 col-8 btn btn-primary btn-sm mb-0 mr-0">Submit</button>
+                        </div>
+
+
+                      </div>
+
+                    </div>
+                  </div>
+
+                </section>
+                <!-- End Section: Block Content -->
+
+
+              </div>
+            </div>
+          </div>
+          <!-- End Individual Post -->
+        </div>
+
+      </div>
+
+
+
+
+    </section>
+    <!-- End Main Content -->
+
+
+    <!-- Post Modal -->
+    <div class="modal fade w-100 p-3" id="postModal" tabindex="-1" role="dialog" aria-labelledby="newPostLabel"
+      aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">New Post</h5>
+            <button type="button" class="close btn-close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true"></span>
+
+            </button>
+          </div>
+          <div class="modal-body ">
+
+            <div class="form-outline mb-2" data-mdb-input-init>
+
+              <input type="text" id="postTitle" name="postTitle"
+                class="form-control border border-secondary border-solid border-1" />
+              <label for="postTitle" class="label-float form-label">Title</label>
+            </div>
+            <textarea class="editor my-2 w-100" id="postContent" rows="5">Here is some interesting stuff...</textarea>
+            <input type="file" name="newFile" id="fileId">
+            <!-- Show result for above requests here -->
+            <div class="d-flex justify-content-center mb-2">
+              <p class="small text-center" id="newPostResult">
+                &nbsp;
+              </p>
+            </div>
+          </div>
+          <div class="modal-footer justify-content-center">
+            <button type="button" class="btn btn-primary w-50" id="submitBtn">Post</button>
+          </div>
+
+        </div>
+      </div>
+    </div>
+    <!-- End Post Modal -->
+
+
+
+
+
+
+  </div>
+  <!-- Dark Overlay element -->
+  <div class="overlay"></div>
+
+
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+    integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+    integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+    crossorigin="anonymous"></script>
+
+  <!-- MDB -->
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.2.0/mdb.umd.min.js"></script>
+
+  <!-- jQuery Custom Scroller CDN -->
+  <script
+    src="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.concat.min.js"></script>
+
+  <!-- Custom Javascript -->
+  <script src="../js/common.js"></script>
+  <script src="../js/common-authorized.js"></script>
+
+
+  <script src="../js/forum.js"></script>
+
+</body>
+
 </html>
